// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query getRegionalStats fails validation if start date is past end date 1`] = `
Object {
  "data": Object {
    "getRegionalStats": null,
  },
  "errors": Array [
    [GraphQLError: End date must come after start date],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query getRegionalStats fetches stats for each region with a defined category and type 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Cannot query field "count" on type "RegionStats".],
    [ValidationError: Cannot query field "min" on type "RegionStats".],
    [ValidationError: Cannot query field "max" on type "RegionStats".],
    [ValidationError: Cannot query field "mean" on type "RegionStats".],
    [ValidationError: Cannot query field "median" on type "RegionStats".],
    [ValidationError: Cannot query field "mode" on type "RegionStats".],
    [ValidationError: Cannot query field "standardDev" on type "RegionStats".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query getRegionalStats fetches stats for each region with all categories and types 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Cannot query field "count" on type "RegionStats".],
    [ValidationError: Cannot query field "min" on type "RegionStats".],
    [ValidationError: Cannot query field "max" on type "RegionStats".],
    [ValidationError: Cannot query field "mean" on type "RegionStats".],
    [ValidationError: Cannot query field "median" on type "RegionStats".],
    [ValidationError: Cannot query field "mode" on type "RegionStats".],
    [ValidationError: Cannot query field "standardDev" on type "RegionStats".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
